# ac-tools

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt
src/: main.cpp
